# QFleetbuilder_Windows

./: CMakeLists.txt  README.md
.github/workflows/: cmake-windows-export.yml
Components/: CMakeLists.txt  qfleet_arc.cpp  qfleet_arc.h  qfleet_armor.cpp  qfleet_armor.h  qfleet_assettype.cpp  qfleet_assettype.h  qfleet_bgt.cpp  qfleet_bgt.h  qfleet_data.cpp  qfleet_data.h  qfleet_faction.cpp  qfleet_faction.h  qfleet_launchasset.cpp  qfleet_launchasset.h  qfleet_launchprofile.cpp  qfleet_launchprofile.h  qfleet_lock.cpp  qfleet_lock.h  qfleet_option.cpp  qfleet_option.h  qfleet_opttype.cpp  qfleet_opttype.h  qfleet_ship.cpp  qfleet_ship.h  qfleet_ship_fleet.cpp  qfleet_ship_fleet.h  qfleet_ship_shipyard.cpp  qfleet_ship_shipyard.h  qfleet_statid.cpp  qfleet_statid.h  qfleet_tonnage.cpp  qfleet_tonnage.h  qfleet_weapon.cpp  qfleet_weapon.h  qft_component.h  qft_enum.h  qfu_specialrules.cpp  qfu_specialrules.h  qfu_xrulesub.h  (+1 more)
Fleetbuilder/: CMakeLists.txt  admiralselectdialog.cpp  admiralselectdialog.h  admiralselectdialog.ui  confirmdialog.cpp  confirmdialog.h  confirmdialog.ui  initlistdialog.cpp  initlistdialog.h  initlistdialog.ui  limitwidget.cpp  limitwidget.h  limitwidget.ui  mainwindow.cpp  mainwindow.h  mainwindow.ui  optselect.cpp  optselect.h  optselect.ui  qflw_battlegroup.cpp  qflw_battlegroup.h  qflw_battlegroup.ui  qflw_group.cpp  qflw_group.h  qflw_group.ui  qflw_list.cpp  qflw_list.h  qflw_list.ui  readme.md  shipselect.cpp  shipselect.h  shipselect.ui  shipview.cpp  shipview.ui  shipviewdialog.cpp  shipviewdialog.h  shipviewdialog.ui
Fleetbuilder/rsc/: icons.qrc
ListParts/: CMakeLists.txt  qfleet_battlegroup.cpp  qfleet_battlegroup.h  qfleet_cost.cpp  qfleet_cost.h  qfleet_group.cpp  qfleet_group.h  qfleet_list.cpp  qfleet_list.h
ListPrinter/: CMakeLists.txt  ListPrinter_global.h  NLTemplate.cpp  listprinter_functions.cpp  listprinter_functions.h  listprinter_legacy.cpp  listprinter_legacy.h  listprinter_short.cpp  listprinter_short.h  qfp_profilecard.cpp  qfp_profilecard.h  qfp_profilecard.ui  qfp_strategycard.cpp  qfp_strategycard.h  qfp_strategycard.ui  qfp_weaponcards.cpp  qfp_weaponcards.h  qfp_weaponcards.ui
ShipView/: CMakeLists.txt  ShipView_global.h  shipview.cpp  shipview.h  shipview.ui
common/: CMakeLists.txt  dvs_widget.cpp  dvs_widget.h  dvs_widget.ui  dvsx_widget.ui  fileTypes.h  windowUtils.h
compression/: CMakeLists.txt  compressor.cpp  compressor.h  constants.h  decompressor.cpp  decompressor.h
compression/LZ4/: CMakeLists.txt
data/: ships.qfs
htmlTemplates/: battlegroupHeader.txt  groupHeader.txt  launchAssets.txt  legacyList.txt  listHeader.txt  listTree.txt  shipProfile.txt  shortList.txt
